third_party/move/move-compiler-v2/tests/more-v1/parser/struct_field_missing_type.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/struct_field_missing_type.move:2:18
  │
2 │     struct S { f } // Each field must specify a type
  │                  ^
  │                  │
  │                  Unexpected '}'
  │                  Expected ':'
